--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Cooking, Italian'
 - !lcc 'TX'
+- GITenberg
 title: 'Practical Italian Recipes for American Kitchens
 
   Sold to aid the Families of Italian Soldiers'
